--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "mariadb": "^2.2.0",
     "node-fetch": "^2.6.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "jest": "^25.1.0"
