--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "sqlite3": "^4.1.1"
   }
 }
