--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "googleapis": "^47.0.0",
     "mariadb": "^2.2.0",
     "node-fetch": "^2.6.0",
     "pug": "^2.0.4",
