--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "how much of the standard had been covered in an apprentices portfolio?",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
     "dev": "NODE_ENV=development nodemon server.js",
     "test": "jest --watchAll"
   },
@@ -18,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "googleapis": "^47.0.0",
+    "jstransformer-markdown-it": "^2.1.0",
     "mariadb": "^2.2.0",
     "node-fetch": "^2.6.0",
     "pug": "^2.0.4",
