--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "google-auth-library": "^5.10.1",
     "googleapis": "^47.0.0",
-    "jstransformer-markdown-it": "^2.1.0",
     "mariadb": "^2.2.0",
+    "markdown-it": "^10.0.0",
     "node-fetch": "^2.6.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.5"
