--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
 version: "3"
 services:
-    papper:
-        build:
-            context: .
-            dockerfile: Dockerfile
-        ports:
-            - "3000:3000"
-        environment:
-            GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
-            GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
-            DRIVE_CLIENT_EMAIL: ${DRIVE_CLIENT_EMAIL}
-            DRIVE_PRIVATE_KEY: ${DRIVE_PRIVATE_KEY}
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
-            MYSQL_USER: ${MYSQL_USER}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            DRIVE_CLIENT_EMAIL: ${DRIVE_CLIENT_EMAIL}
-            DRIVE_PRIVATE_KEY: ${DRIVE_PRIVATE_KEY}
-        depends_on:
-            - db
+    # papper:
+    #     build:
+    #         context: .
+    #         dockerfile: Dockerfile
+    #     ports:
+    #         - "3000:3000"
+    #     environment:
+    #         GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+    #         GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+    #         DRIVE_CLIENT_EMAIL: ${DRIVE_CLIENT_EMAIL}
+    #         DRIVE_PRIVATE_KEY: ${DRIVE_PRIVATE_KEY}
+    #         MYSQL_DATABASE: ${MYSQL_DATABASE}
+    #         MYSQL_USER: ${MYSQL_USER}
+    #         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    #         DRIVE_CLIENT_EMAIL: ${DRIVE_CLIENT_EMAIL}
+    #         DRIVE_PRIVATE_KEY: ${DRIVE_PRIVATE_KEY}
+    #     depends_on:
+    #         - db
     db:
         image: mariadb
         ports:
