--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "bmordan",
   "license": "MIT",
   "dependencies": {
+    "atob": "^2.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
