--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "jest": "^25.1.0",
-    "sqlite3": "^4.1.1"
+    "nodemon": "^2.0.4",
+    "sqlite3": "^4.2.0"
   }
 }
