--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "atob": "^2.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "google-auth-library": "^5.10.1",
     "googleapis": "^47.0.0",
-    "mariadb": "^2.2.0",
+    "mariadb": "^2.5.2",
     "markdown-it": "^10.0.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "pug": "^2.0.4",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.22.3",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.4",
+    "jest": "^25.5.4",
+    "nodemon": "^2.0.6",
     "sqlite3": "^4.2.0"
   }
 }
